--- a/public/assets/css/style_all.css
+++ b/public/assets/css/style_all.css
@@ -317,3 +317,43 @@ body {
     box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.15);
     transition: all 0.3s ease-in-out;
 }
+
+
+.service-box {
+    background-color: #f8f9fa;
+    padding: 20px;
+    border-radius: 8px;
+    border: 1px solid #dee2e6;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+}
+.sub-box {
+    background-color: #fff;
+    border: 2px solid black;
+    padding: 15px;
+    margin: 10px auto;
+    border-radius: 6px;
+    position: relative;
+    width: 100%;
+}
+
+.service-column::before {
+    content: "";
+    position: absolute;
+    top: 82px; /* điểm bắt đầu nối từ icon xuống box */
+    left: 50%;
+    transform: translateX(-50%);
+    height: 28px;
+    width: 2px;
+    background-color: black;
+}
+
+.service-column .sub-box:first-of-type::before {
+    content: "";
+    position: absolute;
+    top: -28px;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 28px;
+    width: 2px;
+    background-color: black;
+}
