--- a/public/assets/css/style_all.css
+++ b/public/assets/css/style_all.css
@@ -7,6 +7,7 @@
     --color-secondary: #C9B037;
     --color-dark: #181f2f;            
     --color-white: #ffffff;
+    --color-gray: #f7f7fda6;
     --color-text: #444;
     --color-muted: #666;
     --color-hover: rgba(240, 240, 240, 0.137)
@@ -14,13 +15,19 @@
 
 body {
     font-family: 'Segoe UI', sans-serif;
-
+    font-size: 17px;
     color: var(--color-text);
+}
+
+@media (min-width: 1200px) {
+    .container {
+        max-width: 1320px; /* website width */
+    }
 }
 
 .company-name {
     font-family: 'Segoe UI', sans-serif;
-    color: var(--color-primary);
+    color: var(--color-secondary);
     /* font-style: italic; */
     font-weight: bold;
 }
@@ -83,6 +90,9 @@ body {
    NAVIGATION BAR
 --------------------------- */
 .main-nav {
+    position: sticky;
+    top: 0; /* dính vào top khi scroll */
+    z-index: 1000;
     background-color: var(--color-primary);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -277,6 +287,19 @@ body {
 }
 
 
+.btn-general {
+    border-radius: 3px;
+    margin-right: 6px;
+    padding: 6px 14px;
+    font-weight: bold;
+    border-radius: 4px;
+    transition: all 0.3s ease;
+}
+
+.btn-general:hover {
+    background-color: var(--color-secondary);
+}
+
 /* --------------------------
    FOOTER
 --------------------------- */
@@ -318,6 +341,14 @@ body {
     transition: all 0.3s ease-in-out;
 }
 
+.certificate-box {
+    background-color: #f8f9fa;
+    padding: 20px;
+    border-radius: 8px;
+    border: 1px solid #dee2e6;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+}
+
 
 .service-box {
     background-color: #f8f9fa;
@@ -339,7 +370,7 @@ body {
 .service-column::before {
     content: "";
     position: absolute;
-    top: 82px; /* điểm bắt đầu nối từ icon xuống box */
+    top: 82px;
     left: 50%;
     transform: translateX(-50%);
     height: 28px;
@@ -356,4 +387,41 @@ body {
     height: 28px;
     width: 2px;
     background-color: black;
+}
+
+.logo-link img {
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.logo-link:hover img {
+    transform: translateY(-5px);
+}
+
+.anphu-logo {
+    height: 85px;
+}
+
+
+.icon-circle-1 {
+    top: -1%;
+    left: 15%;
+    transform: translate(-50%, -50%);
+    width: 64px;
+    height: 64px;
+    background-color: #fff;
+    border: 3px solid var(--color-secondary); 
+    border-radius: 50%;
+    z-index: 10;
+}
+
+.icon-circle-2 {
+    top: 0%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80px;
+    height: 80px;
+    background-color: #fff;
+    border: 3px solid var(--color-primary); 
+    border-radius: 50%;
+    z-index: 10;
 }
