--- a/public/assets/css/style_all.css
+++ b/public/assets/css/style_all.css
@@ -431,3 +431,52 @@ body {
     border-radius: 50%;
     z-index: 10;
 }
+
+
+/* PORTFOLIO */
+#project .btn-outline-warning {
+    color: var(--color-primary);
+    border-color: var(--color-dark);
+    font-weight: bold;
+    background-color: var(--color-white);
+}
+#project .btn-outline-warning:hover {
+    background-color: var(--color-secondary);
+    color: #000;
+}
+
+.card-project {
+    height: 350px;
+    background-size: cover;
+    background-position: center;
+    border: none;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    position: relative;
+    overflow: hidden;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.card-project:hover {
+    transform: translateY(-6px);
+    box-shadow: 0 12px 20px rgba(0, 0, 0, 0.35);
+}
+
+.project-overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.685);
+    padding: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    transform: translateY(100%);
+    transition: transform 0.4s ease;
+}
+
+.card-project:hover .project-overlay {
+    transform: translateY(0);
+}
