--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,9 +1,10 @@
-@import 'tailwindcss';
-
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
 @source '../**/*.blade.php';
 @source '../**/*.js';
+
+@import 'bootstrap/dist/css/bootstrap.min.css';
+@import "@fortawesome/fontawesome-free/css/all.min.css";
 
 @theme {
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
