--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,12 +1,8 @@
-@source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
-@source '../../storage/framework/views/*.php';
-@source '../**/*.blade.php';
-@source '../**/*.js';
-
 @import 'bootstrap/dist/css/bootstrap.min.css';
 @import "@fortawesome/fontawesome-free/css/all.min.css";
+@import "select2/dist/css/select2.min.css";
 
-@theme {
+:root {
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
 }
