--- a/public/assets/css/style_auth.css
+++ b/public/assets/css/style_auth.css
@@ -73,7 +73,7 @@ body {
 --------------------------- */
 .top-bar {
     background-color: var(--color-dark);
-    color: var(--color-white);
+    color: var(--color-primary);
     font-size: 15px;
     padding: 10px 0;
     border-bottom: 1px solid var(--color-secondary);
@@ -96,7 +96,10 @@ body {
 }
 
 .border-divider {
-    border-right: 1px solid rgba(255, 255, 255, 0.2);
+    border-right: none !important;
+    padding-right: 0;
+    margin-right: 0;
+    border: none;
 }
 
 
