--- a/resources/css/style_all.css
+++ b/resources/css/style_all.css
@@ -81,6 +81,7 @@ body {
 }
 
 
+
 /* --------------------------
    HEADER MAIN
 --------------------------- */
@@ -823,3 +824,5 @@ BUTTONS
     text-align: center;
   }
 }
+
+/* PARTNER LOGO */
