--- a/public/css/style_all.css
+++ b/public/css/style_all.css
@@ -671,6 +671,35 @@ body {
     display: flex;
     align-items: center;         /* ✅ canh giữa theo chiều dọc */
     justify-content: center;     /* ✅ canh giữa theo chiều ngang */
+    min-height: 500px;
+    padding: 2rem 1rem;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    overflow: hidden;
+    color: var(--color-white);
+    transition: background-image 0.6s ease-in-out;
+}
+
+.hero-static-slider::before {
+    content: "";
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4); /* overlay nền tối */
+    z-index: 1;
+}
+
+.hero-static-slider .container {
+    position: relative;
+    z-index: 2;
+    width: 100%;
+    max-width: 1140px;
+}
+
+.slide-content-box {
+    width: 100%;
     max-width: 900px;
     background-color: rgba(0, 0, 0, 0.623);
     padding: 20px 30px;
