--- a/public/css/style_all.css
+++ b/public/css/style_all.css
@@ -607,9 +607,8 @@ body {
 }
 
 .dropdown-item .icon-highlight {
-    color: var(--color-primary);
+    color: var(--color-dark) !important;
 }
-
 
 /* --------------------------
    TEXT & UTILITIES
