update_UX/UI: add content alignment from quill-editor

--- a/public/css/style_all.css
+++ b/public/css/style_all.css
@@ -1615,3 +1615,14 @@ BUTTONS
     height: auto;
     aspect-ratio: 16 / 9; /* Giữ tỉ lệ 16:9 */
 }
+
+/* Quill text alignment */
+.ql-align-center {
+  text-align: center;
+}
+.ql-align-right {
+  text-align: right;
+}
+.ql-align-justify {
+  text-align: justify;
+}
