--- a/public/css/style_all.css
+++ b/public/css/style_all.css
@@ -3,7 +3,7 @@
 :root {
     --color-primary: #070f47;
     /* --color-secondary: #e2b605; */
-    --color-secondary: #C9B037;
+    --color-secondary: #ffc107;
     --color-dark: #181f2f;
     --color-white: #ffffff;
     --color-gray: #f7f7fda6;
@@ -11,7 +11,7 @@
     --color-muted: #666;
     --color-hover: rgba(240, 240, 240, 0.137);
 
-    --anphu-gold: #d6b162;
+    --anphu-gold: #ffc107;
     --anphu-bg: #0d2135;
     --anphu-dark: #081522;
 }
